margin ve padding

--- a/packages/react-querybuilder/src/query-builder.scss
+++ b/packages/react-querybuilder/src/query-builder.scss
@@ -37,6 +37,8 @@ $rqb-dnd-hover-border-bottom-width: 2px !default;
     display: flex;
     column-gap: $rqb-spacing;
     align-items: center;
+    margin-right: 12px;
+    padding-bottom: 4px;
   }
 
   .rule {
